<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparent_1" />

    <LinearLayout
        android:id="@+id/top_refresh_ll"
        android:layout_width="@dimen/more_window_width"
        android:layout_height="40dp"
        android:background="@drawable/selector_bg"
        android:clickable="true"
        android:gravity="center" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:src="@drawable/refresh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/refresh"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparent_1" />

    <LinearLayout
        android:id="@+id/top_farword_ll"
        android:layout_width="@dimen/more_window_width"
        android:layout_height="40dp"
        android:background="@drawable/selector_bg"
        android:clickable="true"
        android:gravity="center" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:src="@drawable/forward" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forward"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparent_1" />

    <LinearLayout
        android:id="@+id/top_back_ll"
        android:layout_width="@dimen/more_window_width"
        android:layout_height="40dp"
        android:background="@drawable/selector_bg"
        android:clickable="true"
        android:gravity="center" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparent_1" />

    <LinearLayout
        android:id="@+id/top_setting_ll"
        android:layout_width="@dimen/more_window_width"
        android:layout_height="40dp"
        android:background="@drawable/selector_bg"
        android:clickable="true"
        android:gravity="center" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:src="@drawable/setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>