<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/main_title_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/title_bg" >

        <ImageView
            android:id="@+id/top_left_iv"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/selector_bg"
            android:clickable="true"
            android:scaleType="center"
            android:src="@drawable/forward" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/top_left_iv"
            android:gravity="center_vertical|left"
            android:maxWidth="200dp"
            android:singleLine="true"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/top_left_iv"
            android:background="@color/transparent_1" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <TextView
            android:id="@+id/setting_set_default_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/setting_tip2"
            android:textColor="#5555aa" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="设置主页地址"
        android:textColor="#555555" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <EditText
            android:id="@+id/setting_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/setting_set_homeurl_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:text="@string/setting_tip1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="页面缩放比例:"
            android:textColor="#555555" />

        <EditText
            android:id="@+id/setting_scale_tv"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:singleLine="true"
            android:text="100"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:textColor="#555555" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/setting_scale_sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100%"
            android:textColor="#555555" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="300%"
            android:textColor="#555555" />
    </LinearLayout>

    <Button
        android:id="@+id/setting_set_scale_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/setting_tip3" />

</LinearLayout>