<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/main_title_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/title_bg" >

            <ImageView
                android:id="@+id/top_left_iv"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_bg"
                android:clickable="true"
                android:scaleType="center"
                android:src="@drawable/home_1" />

            <ImageView
                android:id="@+id/top_right_iv"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/selector_bg"
                android:clickable="true"
                android:scaleType="center"
                android:src="@drawable/icon_more" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_toLeftOf="@id/top_right_iv"
                android:layout_toRightOf="@id/top_left_iv"
                android:gravity="center_vertical|left"
                android:singleLine="true"
                android:text="@string/activity_title"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/top_left_iv"
                android:background="@color/transparent_1" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_bg"
            android:orientation="horizontal"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/ll_back"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bottom_selector"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/forward" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:gravity="center_horizontal|top"
                    android:text="@string/back"
                    android:textColor="@color/bottom_text_color"
                    android:textSize="@dimen/main_bottom_text_size"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_farword"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bottom_selector"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:gravity="center_horizontal|top"
                    android:text="@string/forward"
                    android:textColor="@color/bottom_text_color"
                    android:textSize="@dimen/main_bottom_text_size"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_refresh"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bottom_selector"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_refresh_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/refresh" />

                <TextView
                    android:id="@+id/tv_refresh_stop"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:gravity="center_horizontal|top"
                    android:text="@string/refresh"
                    android:textColor="@color/bottom_text_color"
                    android:textSize="@dimen/main_bottom_text_size"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bottom_selector"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:gravity="center_horizontal|top"
                    android:text="@string/home"
                    android:textColor="@color/bottom_text_color"
                    android:textSize="@dimen/main_bottom_text_size"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/input_barcode_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="3dp"
            android:visibility="gone" >

            <Button
                android:id="@+id/input_commt_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="提交" />

            <EditText
                android:id="@+id/input_barcode_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/input_commt_btn"
                android:background="@color/white"
                android:focusable="true"
                android:hint="请输入扫描码"
                android:imeOptions="actionSend"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/fl_web"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/input_barcode_layout"
            android:layout_below="@id/main_title_rl" >

            <cn.cerc.android.view.MyWebView
                android:id="@+id/wv_my"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <LinearLayout
                android:id="@+id/ll_web_fail"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/net_fail"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/net_fail"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_setting_network"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_selector"
                    android:text="@string/setting_network"
                    android:textColor="@color/button_color" />
            </LinearLayout>
        </FrameLayout>

        <ProgressBar
            android:id="@+id/pb_web"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_below="@id/main_title_rl"
            android:progress="50"
            android:progressDrawable="@drawable/progress_bg" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fl_frist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@drawable/first"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/iv_animination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:background="@anim/turn" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>